test/attr/attr_availability_transitive_osx.swift
@@ -1,13 +1,17 @@
-// RUN: %target-typecheck-verify-swift
+// RUN: %target-typecheck-verify-swift -parse-as-library
 // REQUIRES: OS=macosx
 
 // Allow referencing unavailable API in situations where the caller is marked unavailable in the same circumstances.
 
 @available(OSX, unavailable)
-func osx() {} // expected-note 2{{'osx()' has been explicitly marked unavailable here}}
+@discardableResult
+func osx() -> Int { return 0 } // expected-note 7 {{'osx()' has been explicitly marked unavailable here}}
 
 @available(OSXApplicationExtension, unavailable)
 func osx_extension() {}
+
+@available(OSX, unavailable)
+func osx_pair() -> (Int, Int) { return (0, 0) } // expected-note {{'osx_pair()' has been explicitly marked unavailable here}}
 
 func call_osx_extension() {
     osx_extension() // OK; osx_extension is only unavailable if -application-extension is passed.
@@ -34,4 +38,44 @@ func osx_extension_call_osx_extension() {
 @available(OSXApplicationExtension, unavailable)
 func osx_extension_call_osx() {
     osx() // expected-error {{'osx()' is unavailable}}
+}
+
+@available(OSX, unavailable)
+var osx_init_osx = osx() // OK
+
+@available(OSXApplicationExtension, unavailable)
+var osx_extension_init_osx = osx() // expected-error {{'osx()' is unavailable}}
+
+struct Outer {
+  @available(OSX, unavailable)
+  var osx_init_osx = osx() // OK
+
+  @available(OSX, unavailable)
+  lazy var osx_lazy_osx = osx() // OK
+
+  @available(OSXApplicationExtension, unavailable)
+  var osx_extension_init_osx = osx() // expected-error {{'osx()' is unavailable}}
+
+  @available(OSXApplicationExtension, unavailable)
+  var osx_extension_lazy_osx = osx() // expected-error {{'osx()' is unavailable}}
+
+  @available(OSX, unavailable)
+  var osx_init_multi1_osx = osx(), osx_init_multi2_osx = osx() // OK
+
+  @available(OSXApplicationExtension, unavailable)
+  var osx_extension_init_multi1_osx = osx(), osx_extension_init_multi2_osx = osx() // expected-error 2 {{'osx()' is unavailable}}
+
+  @available(OSX, unavailable)
+  var (osx_init_deconstruct1_osx, osx_init_deconstruct2_osx) = osx_pair() // OK
+
+  @available(OSXApplicationExtension, unavailable)
+  var (osx_extension_init_deconstruct1_osx, osx_extension_init_deconstruct2_osx) = osx_pair() // expected-error {{'osx_pair()' is unavailable}}
+}
+
+@available(OSX, unavailable)
+struct NotOnOSX {
+  var osx_init_osx = osx() // OK
+  lazy var osx_lazy_osx = osx() // OK
+  var osx_init_multi1_osx = osx(), osx_init_multi2_osx = osx() // OK
+  var (osx_init_deconstruct1_osx, osx_init_deconstruct2_osx) = osx_pair() // OK
 }
